# Aperture-demo

./: .gitignore  README.md  meson.build
dists/sound/: .gitignore
include/: config.h.in  database.h  meson.build  utils.h
scripts/: install_demo_data.sh
src/: database.c  light.c  main.c  native-lib.c  utils.c
